feat: Preview exam data.json file feature
 - minor style changes

--- a/src/app/exam/new/new-exam-questions/new-exam-questions.component.html
+++ b/src/app/exam/new/new-exam-questions/new-exam-questions.component.html
@@ -37,7 +37,7 @@
 
       <div class="row">
 
-        <div class="col-11">
+        <div class="col-10">
           <div class="input-group mb-3">
             <div class="input-group-text">
               <input class="form-check-input mt-0" type="radio" role="button" value="">
@@ -46,19 +46,13 @@
           </div>
         </div>
 
-        <div class="col-1">
-          <div class="row">
-            <div class="col-6">
-              <button mat-mini-fab color="primary" title="Add new option below">
-                <mat-icon>queue</mat-icon>
-              </button>
-            </div>
-            <div class="col-6">
-              <button mat-mini-fab color="warn" title="Delete the option">
-                <mat-icon>remove_circle_outline</mat-icon>
-              </button>
-            </div>
-          </div>
+        <div class="col-2">
+          <button mat-mini-fab color="accent" class="me-1" title="Add new option below">
+            <mat-icon>queue</mat-icon>
+          </button>
+          <button mat-mini-fab color="warn" title="Delete the option">
+            <mat-icon>remove_circle_outline</mat-icon>
+          </button>
         </div>
 
 
