--- a/src/app/exam/new/new-exam-questions/new-exam-questions.component.html
+++ b/src/app/exam/new/new-exam-questions/new-exam-questions.component.html
@@ -7,6 +7,49 @@
     </div>
   </div>
 
+  <div>
+    <table mat-table recycleRows fixedLayout="true" [dataSource]="dataSource" class="table table-light">
+      <caption><button class="btn btn-primary" >Add</button></caption>
+
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+
+      <!-- Position Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> ID </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef> Description </th>
+        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      </ng-container>
+
+      <!-- Weight Column -->
+      <ng-container matColumnDef="hasMultipleAnswers">
+        <th mat-header-cell *matHeaderCellDef> Has Multiple Answers? </th>
+        <td mat-cell *matCellDef="let element"> {{element.hasMultipleAnswers}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell  *matHeaderCellDef > Actions </th>
+        <td mat-cell *matCellDef="let row">
+          <button class="btn btn-primary" >Edit</button>
+          <button class="btn btn-primary" >Delete</button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                   showFirstLastButtons
+                   aria-label="Select pag"
+    color="accent">
+    </mat-paginator>
+  </div>
+
   <div class="new-exam__exam">
 
     <!--  New Question section    -->
