--- a/src/app/exam/new/new-exam-questions/new-exam-questions.component.html
+++ b/src/app/exam/new/new-exam-questions/new-exam-questions.component.html
@@ -8,35 +8,44 @@
   </div>
 
   <div>
-    <table mat-table recycleRows fixedLayout="true" [dataSource]="dataSource" class="table table-light">
-      <caption><button class="btn btn-primary" >Add</button></caption>
+    <table mat-table recycleRows fixedLayout="true" [dataSource]="dataSource" class="table table-light mw-100">
+      <caption>
+        <button class="btn btn-primary" (click)="addQuestion()">Add</button>
+      </caption>
 
       <!--- Note that these columns can be defined in any order.
             The actual rendered columns are set as a property on the row definition" -->
 
       <!-- Position Column -->
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> ID </th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        <th mat-header-cell *matHeaderCellDef> ID</th>
+        <td mat-cell *matCellDef="let element">
+          <div [innerHtml]="element.id" class="wrap-content"></div>
+        </td>
       </ng-container>
 
       <!-- Name Column -->
       <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> Description </th>
-        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        <th mat-header-cell *matHeaderCellDef> Description
+          <span class="justify-content-end"><input type="checkbox" [(ngModel)]="wrapDescription">
+            <label>Wrap</label></span>
+        </th>
+        <td mat-cell *matCellDef="let element"  class="w-50">
+          <div [innerHtml]="element.description" [class]="wrapDescription ? 'wrap-content': ''"></div>
+        </td>
       </ng-container>
 
       <!-- Weight Column -->
       <ng-container matColumnDef="hasMultipleAnswers">
-        <th mat-header-cell *matHeaderCellDef> Has Multiple Answers? </th>
+        <th mat-header-cell *matHeaderCellDef> Has Multiple Answers?</th>
         <td mat-cell *matCellDef="let element"> {{element.hasMultipleAnswers}} </td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
-        <th mat-header-cell  *matHeaderCellDef > Actions </th>
+        <th mat-header-cell *matHeaderCellDef> Actions</th>
         <td mat-cell *matCellDef="let row">
-          <button class="btn btn-primary" >Edit</button>
-          <button class="btn btn-primary" >Delete</button>
+          <button class="btn btn-primary mb-2">Edit</button>
+          <button class="btn btn-primary mb-2">Delete</button>
         </td>
       </ng-container>
 
@@ -46,96 +55,8 @@
     <mat-paginator [pageSizeOptions]="[5, 10, 20]"
                    showFirstLastButtons
                    aria-label="Select pag"
-    color="accent">
+                   color="accent">
     </mat-paginator>
-  </div>
-
-  <div class="new-exam__exam">
-
-    <!--  New Question section    -->
-    <div class="new-exam__new-question">
-      <div class="row">
-        <div class="col-12 justify-content-center">
-          <h5>New Question</h5>
-        </div>
-      </div>
-
-
-      <form #newQuestionForm="ngForm" (ngSubmit)="saveQuestion()">
-        <div class="row new-question__details">
-          <div class="col-12 mb-3">
-            <label for="questionId" class="form-label text-secondary">ID</label>
-            <div class="input-group">
-              <input type="text" id="questionId" name="questionId" class="form-control text-primary"
-                     [(ngModel)]="newQuestion.id">
-              <button id="btnGenerateQuestionID" type="button" class="btn btn-outline-primary"
-                      (click)="generateQuestionId()">Generate
-              </button>
-            </div>
-          </div>
-
-          <div class="col-12 mb-3">
-            <label for="questionDescription" class="form-label text-secondary">Description</label>
-            <div class="input-group">
-              <textarea id="questionDescription" name="questionDescription" class="form-control text-primary" rows="5"
-                        [(ngModel)]="newQuestion.description"></textarea>
-            </div>
-          </div>
-
-          <div class="col-12 text-secondary mb-3">
-            <div class="form-check form-switch">
-              <input class="form-check-input" type="checkbox" role="switch" id="hasMultipleAnswers"
-                     name="hasMultipleAnswers" [(ngModel)]="newQuestion.hasMultipleAnswers">
-              <label class="form-check-label" for="hasMultipleAnswers">Allow Multiple Answers</label>
-            </div>
-          </div>
-        </div>
-
-        <div class="new-question__options">
-          <ng-template ngFor let-option [ngForOf]="newQuestion.options" let-index="index"
-                       [ngForTrackBy]="fnTracedByForOption">
-            <div class="row">
-
-              <div class="col-10">
-                <div class="input-group mb-3">
-                  <div class="input-group-text">
-
-                    <input class="form-check-input mt-0" type="checkbox" role="button"
-                           (change)="toggleMultipleAnswerField()"
-                           [name]="option.id+'_inputChoiceField'" [(ngModel)]="option.isCorrectAnswer" [value]="true">
-                  </div>
-                  <input type="text" class="form-control" [(ngModel)]="option.text" [name]="option.id+'_inputField'">
-                </div>
-              </div>
-
-              <div class="col-2">
-                <button mat-mini-fab color="light" class="me-1" title="Add new option below" type="button"
-                        (click)="addOption(index)">
-                  <mat-icon color="accent">queue</mat-icon>
-                </button>
-                <button mat-mini-fab color="light" title="Delete the option" type="button"
-                        (click)="removeOption(index, option)">
-                  <mat-icon color="warn">remove_circle_outline</mat-icon>
-                </button>
-              </div>
-
-            </div>
-          </ng-template>
-        </div>
-
-        <div class="row new-exam__actions mt-3 justify-content-md-center">
-          <button mat-raised-button color="primary" type="submit" [disabled]="newQuestionForm.invalid">
-            Add
-            <mat-icon>add</mat-icon>
-          </button>
-        </div>
-
-
-      </form>
-
-    </div>
-
-
   </div>
 
 </div>
