feat: Preview exam data.json file feature
 - mat table prototype added for new exam questions

--- a/src/app/exam/new/new-exam/new-exam.component.html
+++ b/src/app/exam/new/new-exam/new-exam.component.html
@@ -1,7 +1,7 @@
 
 
 <mat-stepper linear #stepper color="primary" orientation="horizontal" >
-  <mat-step  [editable]="true" [hasError]="true" errorMessage="Please fix error" #step1>
+  <mat-step  [editable]="true" [hasError]="hasAnyErrorInDetailsForm() | async" errorMessage="Please fix error" #step1>
     <ng-template matStepLabel><div class="text-primary">Details</div></ng-template>
     <app-exam-new></app-exam-new>
   </mat-step>
