--- a/src/app/exam/new/new-exam-questions/new-exam-questions.component.html
+++ b/src/app/exam/new/new-exam-questions/new-exam-questions.component.html
@@ -8,9 +8,9 @@
   </div>
 
   <div>
-    <table mat-table recycleRows fixedLayout="true" [dataSource]="dataSource" class="table table-light mw-100">
+    <table mat-table recycleRows fixedLayout="true" [dataSource]="dataSource" class="table table-light">
       <caption>
-        <button class="btn btn-primary" (click)="addQuestion()">Add</button>
+        <button class="btn btn-primary" (click)="addQuestion()" [disabled]="!newExamService.hasValidExamDetails()">Add</button>
       </caption>
 
       <ng-container matColumnDef="id">
@@ -26,7 +26,7 @@
             <label>Wrap</label></span>
         </th>
         <td mat-cell *matCellDef="let element"  class="w-50">
-          <div [innerHtml]="element.description" [class]="wrapDescription ? 'wrap-content': ''"></div>
+          <div [innerHtml]="element.description" [className]="wrapDescription ? 'wrap-content': ''"></div>
         </td>
       </ng-container>
 
