feat: Preview exam data.json file feature
 - mat table prototype added for new exam questions

--- a/src/app/exam/new/new-exam-questions/new-exam-questions.component.html
+++ b/src/app/exam/new/new-exam-questions/new-exam-questions.component.html
@@ -38,8 +38,8 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions</th>
         <td mat-cell *matCellDef="let row">
-          <button class="btn btn-primary mb-2">Edit</button>
-          <button class="btn btn-primary mb-2">Delete</button>
+          <button class="btn btn-primary btn-sm mb-2">Edit</button>
+          <button class="btn btn-primary btn-sm mb-2">Delete</button>
         </td>
       </ng-container>
 
