feat: Preview exam data.json file feature
 - mat table prototype added for new exam questions

--- a/src/app/exam/new/new-exam-details/new-exam-details.component.html
+++ b/src/app/exam/new/new-exam-details/new-exam-details.component.html
@@ -13,7 +13,7 @@
       <div class="col-12">
         <div class="input-group">
           <input type="file" class="form-control" id="inputGroupFile04" (change)="onFileChanged($event)">
-          <button class="btn btn-outline-secondary" type="button" (click)="uploadDataFromFile()">Upload</button>
+          <button class="btn btn-outline-secondary" type="button" (click)="uploadData()">Upload</button>
         </div>
       </div>
 
