--- a/src/app/exam/new/new-exam-questions/new-exam-questions.component.html
+++ b/src/app/exam/new/new-exam-questions/new-exam-questions.component.html
@@ -10,7 +10,7 @@
   <div>
     <table mat-table recycleRows fixedLayout="true" [dataSource]="dataSource" class="table table-light">
       <caption>
-        <button class="btn btn-primary" (click)="addQuestion()" [disabled]="!newExamService.hasValidExamDetails()">Add</button>
+        <button class="btn btn-primary" (click)="openAddQuestionDialog()" [disabled]="!newExamService.hasValidExamDetails()">Add</button>
       </caption>
 
       <ng-container matColumnDef="id">
@@ -38,7 +38,7 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions</th>
         <td mat-cell *matCellDef="let row">
-          <button class="btn btn-primary btn-sm mb-2">Edit</button>
+          <button class="btn btn-primary btn-sm mb-2" (click)="openUpdateQuestionDialog(row)">Edit</button>
           <button class="btn btn-primary btn-sm mb-2">Delete</button>
         </td>
       </ng-container>
