feat: Preview exam data.json file feature
 - mat table prototype added for new exam questions

--- a/src/app/exam/new/new-exam/new-exam.component.html
+++ b/src/app/exam/new/new-exam/new-exam.component.html
@@ -5,7 +5,7 @@
     <ng-template matStepLabel><div class="text-primary">Details</div></ng-template>
     <app-exam-new></app-exam-new>
   </mat-step>
-  <mat-step [editable]="true" state="done">
+  <mat-step [editable]="true">
     <ng-template matStepLabel><div class="text-primary">Questions</div></ng-template>
     <app-new-exam-questions></app-new-exam-questions>
     <div class="row mt-3">
