--- a/src/app/exam/new/new-exam-questions/new-exam-questions.component.html
+++ b/src/app/exam/new/new-exam-questions/new-exam-questions.component.html
@@ -7,37 +7,32 @@
     </div>
   </div>
 
-  <div>
-    <table mat-table recycleRows fixedLayout="true" [dataSource]="dataSource" class="table table-light">
+  <div class="tab-questions-container">
+    <table mat-table recycleRows fixedLayout="true" [dataSource]="dataSource" class="table table-light tab-questions">
       <caption>
         <button class="btn btn-primary" (click)="openAddQuestionDialog()" [disabled]="!newExamService.hasValidExamDetails()">Add</button>
+
+        <input type="checkbox" class="btn-check" id="btn-check-outlined" autocomplete="off" [(ngModel)]="wrapDescription">
+        <label class="btn btn-outline-success" for="btn-check-outlined">Wrap</label>
       </caption>
 
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> ID</th>
+        <th mat-header-cell *matHeaderCellDef class="col-2 text-center"> ID</th>
         <td mat-cell *matCellDef="let element">
           <div [innerHtml]="element.id" class="wrap-content"></div>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> Description
-          <span class="justify-content-end"><input type="checkbox" [(ngModel)]="wrapDescription">
-            <label>Wrap</label></span>
-        </th>
+        <th mat-header-cell *matHeaderCellDef class="col-10 text-center"> Description</th>
         <td mat-cell *matCellDef="let element"  class="w-50">
-          <div [innerHtml]="element.description" [className]="wrapDescription ? 'wrap-content': ''"></div>
+          <div [innerHtml]="element.description" [className]="!wrapDescription ? 'wrap-content': ''"></div>
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="hasMultipleAnswers">
-        <th mat-header-cell *matHeaderCellDef> Has Multiple Answers?</th>
-        <td mat-cell *matCellDef="let element"> {{element.hasMultipleAnswers}} </td>
-      </ng-container>
-
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions</th>
-        <td mat-cell *matCellDef="let row">
+        <th mat-header-cell *matHeaderCellDef class="col-2 text-center">Actions</th>
+        <td mat-cell *matCellDef="let row" class="text-center">
           <button class="btn btn-primary btn-sm mb-2" (click)="openUpdateQuestionDialog(row)">Edit</button>
           <button class="btn btn-primary btn-sm mb-2">Delete</button>
         </td>
