--- a/src/app/exam/new/new-exam-questions/new-exam-questions.component.html
+++ b/src/app/exam/new/new-exam-questions/new-exam-questions.component.html
@@ -34,7 +34,7 @@
         <th mat-header-cell *matHeaderCellDef class="col-2 text-center">Actions</th>
         <td mat-cell *matCellDef="let row" class="text-center">
           <button class="btn btn-primary btn-sm mb-2" (click)="openUpdateQuestionDialog(row)">Edit</button>
-          <button class="btn btn-primary btn-sm mb-2">Delete</button>
+          <button class="btn btn-primary btn-sm mb-2" (click)="deleteQuestion(row)">Delete</button>
         </td>
       </ng-container>
 
