--- a/src/app/exam/new/new-exam/new-exam.component.html
+++ b/src/app/exam/new/new-exam/new-exam.component.html
@@ -9,7 +9,7 @@
     <ng-template matStepLabel><div class="text-primary">Questions</div></ng-template>
     <app-new-exam-questions></app-new-exam-questions>
     <div class="row mt-3">
-      <div class="col-12 d-grid gap-2 d-md-flex justify-content-md-end">
+      <div class="col-12 d-grid gap-2 d-md-flex justify-content-center">
         <button class="btn btn-primary" matStepperPrevious [disabled]="step1.hasError">Back</button>
         <button class="btn btn-primary" matStepperNext [disabled]="step1.hasError">Next</button>
       </div>
