feat: Preview exam data.json file feature
 - new exam summary added

--- a/src/app/exam/new/new-exam/new-exam.component.html
+++ b/src/app/exam/new/new-exam/new-exam.component.html
@@ -20,7 +20,7 @@
     <p>You are now done.</p>
     <div>
       <button class="btn btn-primary" matStepperPrevious>Back</button>
-      <button class="btn btn-primary" (click)="stepper.reset()">Reset</button>
+      <button class="btn btn-primary" (click)="downloadDataAsJsonFile()">Reset</button>
     </div>
   </mat-step>
 </mat-stepper>
