--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,21 +1,22 @@
 <div class="container question">
 
   <div class="question__title mt-4">
-    <h5>{{exam.name}}</h5>
+    <h5>Todo: Question Title</h5>
   </div>
 
   <div class="question_content">
 
     <mat-progress-bar mode="determinate" [value]="getCurrentProgress()" class="mb-2"></mat-progress-bar>
+    <div class="row">
+      <div class="col-12 justify-content-around" [innerHtml]="question.description"></div>
+    </div>
 
-    <app-question-details [question]="question" [exam]="exam"></app-question-details>
   </div>
 
   <div class="question__answers">
     <app-question-answers [question]="question" [exam]="exam"></app-question-answers>
   </div>
 
-  {{question.selectedAnswer | json}}
 
   <div *ngIf="canDisplaySolution()" class="question_solution mt-3 p-1" style="border: 1px solid purple;">
     <app-question-solution [question]="question" [exam]="exam"></app-question-solution>
@@ -30,7 +31,8 @@
     <button *ngIf="!isItLastQuestion()" (click)="moveToNextQuestion()" class="btn btn-primary mr-3 mt-2">Next</button>
     <!-- Display Submit option only for last question and exam's display solution option set to display solution at the end -->
     <button *ngIf="canDisplaySubmitOption()" class="btn btn-success mr-3 mt-2" (click)="submit()">Submit</button>
-    <button *ngIf="exam?.isSubmitted && isItLastQuestion() " class="btn btn-primary mr-3 mt-2" (click)="home()">Home</button>
+    <button *ngIf="exam?.isSubmitted && isItLastQuestion() " class="btn btn-primary mr-3 mt-2" (click)="home()">Home
+    </button>
   </div>
 
 </div>
