feat: Preview exam data.json file feature
 - wording added to be more precise

--- a/src/app/exam/practice/practice-exam.component.html
+++ b/src/app/exam/practice/practice-exam.component.html
@@ -29,7 +29,7 @@
               name="examResultDisplayOption"
               [(ngModel)]="exam.solutionDisplayOption"
             />
-            Display solution after answering individual questions
+            Display correct answer after answering each questions
           </label>
         </div>
         <div>
@@ -39,7 +39,7 @@
                    name="examResultDisplayOption"
                    [(ngModel)]="exam.solutionDisplayOption"
             />
-            Display solution only at the end of exam
+            Display correct answer only at the end of exam
           </label>
         </div>
       </div>
