--- a/src/app/exam/practice/practice-exam-summary/practice-exam-summary.component.html
+++ b/src/app/exam/practice/practice-exam-summary/practice-exam-summary.component.html
@@ -19,7 +19,7 @@
 
     <div class="summary-actions row mt-4">
       <div class="col-10 text-center">
-        <button class="btn btn-primary mr-3" (click)="viewSolutions()">Solutions</button>
+        <button class="btn btn-primary mr-3" (click)="viewSolutions()">Answers</button>
         <button class="btn btn-primary" (click)="gotoHome()">Home</button>
       </div>
     </div>
