feat: Preview exam data.json file feature
 - question page fixed to reload on refresh

--- a/src/app/exam/practice/practice-exam-question/practice-exam-question.component.html
+++ b/src/app/exam/practice/practice-exam-question/practice-exam-question.component.html
@@ -60,7 +60,7 @@
   <div class="actions">
     <!-- Save & Display correct answer -->
     <button *ngIf="!exam?.isSubmitted && exam.solutionDisplayOption == displaySolutionOption.AFTER_QUESTION_SUBMISSION"
-            class="btn btn-primary mr-3 mt-2" (click)="save()">Show Answer</button>
+            class="btn btn-outline-primary mr-3 mt-2" (click)="save()">Show Answer</button>
     <!-- Display Previous button except first question -->
     <button *ngIf="!isItFirstQuestion()" (click)="moveToPrevQuestion()" class="btn btn-primary mr-3 mt-2">Prev</button>
     <!-- Display Next option except last question -->
