--- a/src/app/exam/practice/question/practice-exam-question.component.scss
+++ b/src/app/exam/practice/question/practice-exam-question.component.scss
@@ -14,8 +14,17 @@
 }
 
 ::ng-deep .mat-mdc-radio-button .mdc-radio .mdc-radio__native-control:disabled:checked+.mdc-radio__background .mdc-radio__outer-circle,
+::ng-deep .mat-mdc-radio-button .mdc-radio .mdc-radio__native-control:disabled:checked+.mdc-radio__background .mdc-radio__inner-circle,
 ::ng-deep .mat-mdc-checkbox.mat-mdc-checkbox-disabled.mat-mdc-checkbox-checked .mdc-checkbox__background {
-  background: $gray-800 !important;
-  opacity: 50%;
+  background: $black !important;
+  opacity: 75%;
 }
 
+.highlight-right-answer {
+  background: forestgreen;
+  font-weight: bold;
+}
+.highlight-right-answer-text {
+  color: whitesmoke !important;
+  font-weight: bold;
+}
