--- a/src/app/exam/practice/question/practice-exam-question.component.html
+++ b/src/app/exam/practice/question/practice-exam-question.component.html
@@ -70,6 +70,7 @@
     <!-- Save & Display correct answer -->
     <button [disabled]="isQuestionOrExamSubmitted()"
             *ngIf="exam.solutionDisplayOption == displaySolutionOption.AFTER_QUESTION_SUBMISSION"
+            [hidden]="this.exam?.isSubmitted"
             class="btn btn-outline-primary mr-3 mt-2" (click)="save()">Show Answer
     </button>
     <!-- Display Previous button except first question -->
@@ -78,7 +79,7 @@
     <button *ngIf="!isItLastQuestion()" (click)="moveToNextQuestion()" class="btn btn-primary mr-3 mt-2">Next</button>
     <!-- Display Submit option only for last question and exam's display solution option set to display solution at the end -->
     <button *ngIf="canDisplaySubmitOption()" class="btn btn-success mr-3 mt-2" (click)="submit()">Submit</button>
-    <button *ngIf="exam?.isSubmitted && isItLastQuestion() " class="btn btn-primary mr-3 mt-2" (click)="home()">Home
+    <button *ngIf="exam?.isSubmitted && isItLastQuestion() " class="btn btn-success mr-3 mt-2" (click)="home()">Home
     </button>
   </div>
 
